add requests get

--- a/Demo20181029.ipynb
+++ b/Demo20181029.ipynb
@@ -1341,6 +1341,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1111"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view_cnt = int(soup.select_one('.ndArticle_view').text)\n",
+    "view_cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'壹週刊'"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "category = soup.select('.current')[1].text\n",
+    "category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def getDetail(url):\n",
+    "    res   = requests.get(url)\n",
+    "    soup  = BeautifulSoup(res.text, 'lxml')\n",
+    "    title   = soup.select_one('h1').text\n",
+    "    content = soup.select_one('.ndArticle_margin p').text\n",
+    "    dt = soup.select_one('.ndArticle_creat').text\n",
+    "    dt = datetime.strptime(dt, '出版時間：%Y/%m/%d %H:%M')\n",
+    "    \n",
+    "    if soup.select_one('.ndArticle_view'):\n",
+    "        view_cnt = int(soup.select_one('.ndArticle_view').text)\n",
+    "        \n",
+    "    category = soup.select('.current')[1].text\n",
+    "    return {'title':title, 'content':content, 'dt':dt, \n",
+    "            'view_cnt':view_cnt, 'category': category}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'category': '壹週刊',\n",
+       " 'content': '看本篇完整版內容，請點以下連結：〈雙姝爭后1〉Sandy搶《聲林之王》主持\\u3000慘遭Lulu攔胡【壹點就報】已播出3集的東森《聲林之王》，是台灣第一個仿照中國大舞台大製作的歌唱節目。有工作人員向《壹週刊》爆料，吳姍儒（Sandy）很想主持這節目，得知後，大力推荐自己，主動跟東森溝通，不料製作單位遲遲未回覆，又透過她老爸吳宗憲（憲哥）說項，令憲哥好友王令麟左右為難。工作人員還透露，當初《聲林之王》在尋覓主持人時，製作人王偉忠覺得主持人會唱歌還是較好，基於須找「合乎節目調性，也能對參賽者給意見」的主持人，因此堅持用發過EP《LuLu，腿》、《可以》和專輯《美小鴨》的Lulu（黃路梓茵），Sandy因此錯失機會...(點我看全文)更多壹週刊報導〈雙姝爭后1〉Sandy搶《聲林之王》主持\\u3000慘遭Lulu攔胡【壹點就報】〈雙姝爭后2〉吳宗憲聯手女兒Sandy\\u3000拿下購物台千萬代言【壹點就報】〈雙姝爭后3〉漲價or靠自己\\u3000綜藝天王星二代大不同 【壹點就報】◎你投訴‧壹週刊幫你爆料\\xa0《壹週刊APP》全新改版！完全免費！快點下載一起掌握新聞！>>IOS下載 https://goo.gl/G3jADF>>android下載 https://goo.gl/5fGOAI\\xa0',\n",
+       " 'dt': datetime.datetime(2018, 10, 29, 13, 0),\n",
+       " 'title': '〈雙姝爭后1〉Sandy搶《聲林之王》主持\\u3000慘遭Lulu攔胡【壹點就報】',\n",
+       " 'view_cnt': 1706}"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getDetail('https://tw.news.appledaily.com/nextmag/realtime/20181029/1456211/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-161-29c2dfbb227d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgetDetail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://tw.news.appledaily.com/politics/realtime/20181029/1456312/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-160-0b80f149afd7>\u001b[0m in \u001b[0;36mgetDetail\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mdt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.ndArticle_creat'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mdt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'出版時間：%Y/%m/%d %H:%M'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mview_cnt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.ndArticle_view'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mcategory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.current'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     return {'title':title, 'content':content, 'dt':dt, \n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'text'"
+     ]
+    }
+   ],
+   "source": [
+    "getDetail('https://tw.news.appledaily.com/politics/realtime/20181029/1456312/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup.select_one('qoo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "printing\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "a = False\n",
+    "a = None\n",
+    "a = []\n",
+    "a = ['1']\n",
+    "if a:\n",
+    "    print('printing')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def getDetail(url):\n",
+    "    ret   = {}\n",
+    "    res   = requests.get(url)\n",
+    "    soup  = BeautifulSoup(res.text, 'lxml')\n",
+    "    ret['title']   = soup.select_one('h1').text\n",
+    "    ret['content'] = soup.select_one('.ndArticle_margin p').text\n",
+    "    dt = soup.select_one('.ndArticle_creat').text\n",
+    "    ret['dt'] = datetime.strptime(dt, '出版時間：%Y/%m/%d %H:%M')\n",
+    "    \n",
+    "    if soup.select_one('.ndArticle_view'):\n",
+    "        ret['view_cnt'] = int(soup.select_one('.ndArticle_view').text)\n",
+    "        \n",
+    "    ret['category'] = soup.select('.current')[1].text\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'category': '政治',\n",
+       " 'content': '前總統馬英九今天到嘉義縣朴子市為國民黨縣長候選人吳育仁輔選，馬英九再提核能發電問題，馬英九說，民進黨政府廢核，還把核四燃料棒送到美國拍賣，真是荒蓎政策。\\xa0嘉義縣朴子市上周六發生空污褐爆問題嚴重，縣長參選人吳育仁今天在朴子掃街時，特別提及民進黨電力政策完全錯誤，才會導致朴子地區空氣污染嚴重，吳育仁說，他主張以核養綠，拒絕用肺發電，嘉義縣老人多，空污影響老幼最嚴重。\\xa0馬英九說，核綠應該併存，用核能發展綠能，到目前核電還是世界上最乾淨的能源，等到有一天綠能發展成熟，再廢核，就如同找工作一樣，總要騎馬找馬，但民進黨政府卻主張廢核，還將核四燃料棒送回美國拍賣，如同棄馬殺馬，讓他這個姓馬的，真是情何以堪。\\xa0馬英九在吳育仁及朴子市在地議員李國勝等人陪同下到朴子市第二市場掃街拜票，馬英九的熱度已大不如從前，沿途除了國安人員和警察外，已少有粉絲追隨，不過仍有民眾因為很少看過馬英九本尊，邀馬英九一同合照留作紀念。\\xa0而今天上午馬英九在朴子市拜票後，將轉往嘉義市陪同市長候選人黃敏惠掃街拜票。而今天下午3時高雄市長候選人韓國瑜將到嘉義縣黨部參加造勢大會，韓流能否在嘉義縣出現外溢效應，值得進一步觀察。（王智勇／嘉義報導）距離11月24日九合一選戰，只剩倒數最後一個月！想看最激烈的選戰實況、最精闢的選情評估、最完整的政見分析，敬請鎖定「蘋果日報九合一選舉爭霸戰」。網址：https://tw.feature.appledaily.com/election2018/',\n",
+       " 'dt': datetime.datetime(2018, 10, 29, 14, 25),\n",
+       " 'title': '馬英九陪吳育仁掃街\\u3000批民進黨廢核政策錯誤'}"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getDetail('https://tw.news.appledaily.com/politics/realtime/20181029/1456312/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def getDetail(url):\n",
+    "    ret   = {}\n",
+    "    try:\n",
+    "        res   = requests.get(url)\n",
+    "        soup  = BeautifulSoup(res.text, 'lxml')\n",
+    "        ret['title']   = soup.select_one('h1').text\n",
+    "        ret['content'] = soup.select_one('.ndArticle_margin p').text\n",
+    "        dt = soup.select_one('.ndArticle_creat').text\n",
+    "        ret['dt'] = datetime.strptime(dt, '出版時間：%Y/%m/%d %H:%M')\n",
+    "\n",
+    "        if soup.select_one('.ndArticle_view'):\n",
+    "            ret['view_cnt'] = int(soup.select_one('.ndArticle_view').text)\n",
+    "\n",
+    "        ret['category'] = soup.select('.current')[1].text\n",
+    "    except:\n",
+    "        print(url)\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
