add static file

--- a/Demo20181029.ipynb
+++ b/Demo20181029.ipynb
@@ -2460,6 +2460,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 提示"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = '''\n",
+    "\n",
+    "<table>\n",
+    "    <thead>\n",
+    "    <tr> <th> col1 </th> <th> col2 </th> <th> col3 </th></tr>\n",
+    "    \n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "    <tr> <td> val1 </td> <td> val2 </td> <td> val3 </td></tr>\n",
+    "    <tr> <td> val4 </td> <td> val5 </td> <td> val6 </td></tr>\n",
+    "    </tbody>\n",
+    "\n",
+    "</table>\n",
+    "'''\n",
+    "\n",
+    "import pandas\n",
+    "dfs = pandas.read_html(sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>val1</td>\n",
+       "      <td>val2</td>\n",
+       "      <td>val3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>val4</td>\n",
+       "      <td>val5</td>\n",
+       "      <td>val6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1  col2  col3\n",
+       "0  val1  val2  val3\n",
+       "1  val4  val5  val6"
+      ]
+     },
+     "execution_count": 280,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs[0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
