--- a/Demo20181116.ipynb
+++ b/Demo20181116.ipynb
@@ -1090,6 +1090,8 @@
     "data_ary = []\n",
     "for year in range(103, 107):\n",
     "    for season in ['01','02','03','04']:\n",
+    "        payload['year']   = str(year)\n",
+    "        payload['season'] = season\n",
     "        res = requests.post(url, data = payload)\n",
     "        soup = BeautifulSoup(res.text, 'lxml')\n",
     "        tb = soup.select('table')\n",
