add data and dash

--- a/Demo20181116.ipynb
+++ b/Demo20181116.ipynb
@@ -1341,6 +1341,256 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 文字探勘"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['this', 'is', 'a', 'book']"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'this is a book'\n",
+    "s.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: jieba in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages\n",
+      "\u001b[33mYou are using pip version 9.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install jieba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Dumping model to file cache /var/folders/46/b7dzk4mn6g54qzptv608w7d00000gn/T/jieba.cache\n",
+      "Loading model cost 1.012 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['那酸民婉君', '也', '可以', '報名', '嗎']"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "list(jieba.cut('那酸民婉君也可以報名嗎'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article = '「人生短短幾個秋～不醉不罷休～」，無黨籍台北市長候選人吳萼洋，因在電視辯論會上大推蜂蜜檸檬及清唱《愛江山更愛美人》而引爆話題，改編出包括《憨智回頭》、《缺電英》等多首神曲的「老天鵝娛樂」搭上熱潮，就以《愛江山更愛美人》來改編成《愛蜂蜜也愛檸檬》，讓吳萼洋都在粉專分享大讚「台灣創意王國的另一種呈現」。'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " '人生短短幾個秋',\n",
+       " '不醉不罷休',\n",
+       " '',\n",
+       " '',\n",
+       " '無黨籍台北市長候選人吳萼洋',\n",
+       " '因在電視辯論會上大推蜂蜜檸檬及清唱',\n",
+       " '愛江山更愛美人',\n",
+       " '而引爆話題',\n",
+       " '改編出包括',\n",
+       " '憨智回頭',\n",
+       " '、',\n",
+       " '缺電英',\n",
+       " '等多首神曲的',\n",
+       " '老天鵝娛樂',\n",
+       " '搭上熱潮',\n",
+       " '就以',\n",
+       " '愛江山更愛美人',\n",
+       " '來改編成',\n",
+       " '愛蜂蜜也愛檸檬',\n",
+       " '',\n",
+       " '讓吳萼洋都在粉專分享大讚',\n",
+       " '台灣創意王國的另一種呈現',\n",
+       " '。']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re.split('，|《|》|～|」|「', article)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generator"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "\n",
+    "seg_list = jieba.cut(\"大巨蛋案對市府同仁下封口令？　柯P否認\", cut_all=True)\n",
+    "type(seg_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "大\n",
+      "巨蛋\n",
+      "案\n",
+      "對\n",
+      "市府\n",
+      "同仁\n",
+      "下\n",
+      "封口\n",
+      "封口令\n",
+      "口令\n",
+      "\n",
+      "\n",
+      "\n",
+      "柯\n",
+      "P\n",
+      "否\n",
+      "認\n"
+     ]
+    }
+   ],
+   "source": [
+    "for w in seg_list:\n",
+    "    print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "大\n",
+      "巨蛋\n",
+      "案對\n",
+      "市府\n",
+      "同仁\n",
+      "下\n",
+      "封口令\n",
+      "？\n",
+      "　\n",
+      "柯\n",
+      "P\n",
+      "否認\n"
+     ]
+    }
+   ],
+   "source": [
+    "seg_list = jieba.cut(\"大巨蛋案對市府同仁下封口令？　柯P否認\")\n",
+    "\n",
+    "for w in seg_list:\n",
+    "    print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "大巨蛋\n",
+      "案對\n",
+      "市府\n",
+      "同仁\n",
+      "下\n",
+      "封口令\n",
+      "？\n",
+      "　\n",
+      "柯P\n",
+      "否認\n"
+     ]
+    }
+   ],
+   "source": [
+    "jieba.load_userdict('userdict.txt')\n",
+    "\n",
+    "seg_list = jieba.cut(\"大巨蛋案對市府同仁下封口令？　柯P否認\")\n",
+    "\n",
+    "for w in seg_list:\n",
+    "    print(w)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
