--- a/Demo20181116.ipynb
+++ b/Demo20181116.ipynb
@@ -1592,6 +1592,449 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "大巨蛋 n\n",
+      "案 ng\n",
+      "對 p\n",
+      "市府 n\n",
+      "同仁 nr\n",
+      "下 f\n",
+      "封口令 n\n",
+      "？ x\n",
+      "　 x\n",
+      "柯P nr\n",
+      "否認 v\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba.posseg as pseg\n",
+    "jieba.load_userdict('userdict.txt')\n",
+    "words = pseg.cut(\"大巨蛋案對市府同仁下封口令？　柯P否認\")\n",
+    "for w in words:\n",
+    "    print(w.word, w.flag)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "大巨蛋 0 3\n",
+      "案對 3 5\n",
+      "市府 5 7\n",
+      "同仁 7 9\n",
+      "下 9 10\n",
+      "封口令 10 13\n",
+      "？ 13 14\n",
+      "　 14 15\n",
+      "柯P 15 17\n",
+      "否認 17 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"大巨蛋案對市府同仁下封口令？　柯P否認\"\n",
+    "words = jieba.tokenize(sentence)\n",
+    "\n",
+    "for tw in words:\n",
+    "    print(tw[0], tw[1], tw[2])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 利用爬蟲擴增字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "res = requests.get('https://zh.wikipedia.org/wiki/%E6%9F%AF%E6%96%87%E5%93%B2')\n",
+    "soup = BeautifulSoup(res.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['柯文哲', 'Ko Wen-je', '柯P', 'KP']"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[b.text for b in soup.select('#mw-content-text p')[6].select('b')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['郭明政', '政大', '校長遴選']"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "res = requests.get('https://udn.com/news/story/6928/3484386')\n",
+    "soup = BeautifulSoup(res.text)\n",
+    "[e.text for e in soup.select('#story_tags a')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## n-gram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "那我\n",
+      "我們\n",
+      "們酸\n",
+      "酸民\n",
+      "民婉\n",
+      "婉君\n",
+      "君也\n",
+      "也可\n",
+      "可以\n",
+      "以報\n",
+      "報名\n",
+      "名嗎\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence='那我們酸民婉君也可以報名嗎'\n",
+    "for i in range(0,len(sentence) - 2 + 1):\n",
+    "    print(sentence[i:i+2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "那我們\n",
+      "我們酸\n",
+      "們酸民\n",
+      "酸民婉\n",
+      "民婉君\n",
+      "婉君也\n",
+      "君也可\n",
+      "也可以\n",
+      "可以報\n",
+      "以報名\n",
+      "報名嗎\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence='那我們酸民婉君也可以報名嗎'\n",
+    "for i in range(0,len(sentence) - 3 + 1):\n",
+    "    print(sentence[i:i+3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['那我', '我們', '們酸', '酸民', '民婉', '婉君', '君也', '也可', '可以', '以報', '報名', '名嗎']"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ngram(input_sentence,n=2):\n",
+    "    ret = []\n",
+    "    for i in range(0,len(input_sentence) - n + 1):\n",
+    "        ret.append(input_sentence[i:i+n])\n",
+    "    return ret\n",
+    "\n",
+    "ngram(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['那我們', '我們酸', '們酸民', '酸民婉', '民婉君', '婉君也', '君也可', '也可以', '可以報', '以報名', '報名嗎']"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ngram(sentence, n = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = '''\n",
+    "台北市長候選人吳蕚洋日前在辯論會大談蜂蜜檸檬好處，結尾又清唱《愛江山更愛美人》，讓這首24年前的歌曲爆紅，原曲MV點閱率上衝到461萬，原唱李麗芬還被拱在跨年和吳蕚洋合體，對此，李麗芬也做出回應。\n",
+    "\n",
+    "吳蕚洋不只讓蜂蜜檸檬和歌曲《愛江山更愛美人》爆紅，歌曲原唱李麗芬也成為話題人物，她日前就在臉書發文，原曲MV點閱次數已上衝到461萬，還有網友拱吳蕚洋和李麗芬在跨年晚會合體，李麗芬則寫下：「柯市長不太可能答應的」，也讓網友超期待「想看+1」、「求合體，今年最佳跨年勁曲就是這首了」。\n",
+    "\n",
+    "網友期待看到吳蕚洋和李麗芬合體，根據《聯合報》報導，李麗芬鬆口表示，目前市政府沒有邀約，若有適當酬勞，她願意和吳萼洋在跨年晚會合體「我可以開心上台，台上台下的朋友一起合唱。」\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "c = Counter(ngram(sentence, n = 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('李麗芬', 7), ('吳蕚洋', 5), ('合體，', 4), ('在跨年', 3), ('，李麗', 3)]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.most_common(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "c = Counter(ngram(sentence, n = 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('李麗', 7), ('麗芬', 7), ('吳蕚', 5), ('蕚洋', 5), ('合體', 5)]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.most_common(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['台北市長候選人吳蕚洋日前在辯論會大談蜂蜜檸檬好處',\n",
+       " '結尾又清唱',\n",
+       " '愛江山更愛美人',\n",
+       " '',\n",
+       " '讓這首24年前的歌曲爆紅',\n",
+       " '原曲MV點閱率上衝到461萬',\n",
+       " '原唱李麗芬還被拱在跨年和吳蕚洋合體',\n",
+       " '對此',\n",
+       " '李麗芬也做出回應。']"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "sentence = '台北市長候選人吳蕚洋日前在辯論會大談蜂蜜檸檬好處，結尾又清唱《愛江山更愛美人》，讓這首24年前的歌曲爆紅，原曲MV點閱率上衝到461萬，原唱李麗芬還被拱在跨年和吳蕚洋合體，對此，李麗芬也做出回應。'\n",
+    "re.split('，|《|》', sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'台北市長候選人日前在辯論會大談好處'"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def removeKey(text, keywords):\n",
+    "    ret = text\n",
+    "    for kw in keywords:\n",
+    "        ret = ret.replace(kw, '')\n",
+    "    return ret\n",
+    "s = '台北市長候選人吳蕚洋日前在辯論會大談蜂蜜檸檬好處'\n",
+    "removeKey(s, ['吳蕚洋', '蜂蜜檸檬'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = '''\n",
+    "選戰進入最後倒數，除了候選人努力拉票，家人成為最大的助手，台北市長柯文哲為了拚連任，請出柯爸柯媽當拉票機助選，兩老今一早就前往新東市場陪松山、信義區議員候選人洪士奇掃街拜票，途中遇到有民眾向柯媽陳情抗議柯文哲亂砍重陽老金，柯媽則表示身體健康最重要，反問「身體不好拿1500要幹嘛？」\n",
+    "\n",
+    "陳情民眾見到柯媽媽來了，趕緊上前訴苦，「我4年前投給柯文哲，沒想到卻造成自己的傷害！」抗議全台都有敬老金1500元，台北市財政最好，最有資格提供，就連柯爸柯媽自己在新竹也有領，但柯文哲卻剝奪老人的權利，「一個市長不只是還債，還債不是市長的任務。」\n",
+    "\n",
+    "\n",
+    "圖／TVBS資料畫面\n",
+    "\n",
+    "對此柯媽則表示，他會把意見向柯文哲反映，緩頰雖然沒有敬老金，但有替長者免費施打肺炎疫苗，一針要3千多元，等於2年的敬老金，還可以防範10年以上，強調身體健康比什麼都重要，還反問「身體不好拿1500元要幹嘛？」\n",
+    "\n",
+    "對於台北市長選情緊繃，柯媽說「我掃我的，柯文哲自己會掃街」，認為選舉是由天不由人，選不選得上要看大眾，不是自己說了算，但還是有信心兒子能勝選。'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentenceAry = re.split('，|《|》', sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keywords = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for n in range(4,1,-1):\n",
+    "    words = []\n",
+    "    for sentence in sentenceAry:\n",
+    "        text_list = removeKey(sentence, keywords)\n",
+    "        words.extend(ngram(text_list, n))\n",
+    "        \n",
+    "    c = Counter(words)\n",
+    "    for w, cnt in c.items():\n",
+    "        if cnt >= 3:\n",
+    "            keywords.append(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1500', '台北市', '柯文哲', '」\\n\\n', '敬老金', '柯媽', '身體', '自己']"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
