--- a/Demo20181116.ipynb
+++ b/Demo20181116.ipynb
@@ -2038,7 +2038,312 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sample_text  = '''\n",
+    "\n",
+    "    第一階段：\n",
+    "\n",
+    "    好，各位電視機前面的朋友大家好。我是市長候選人登記第四號的柯文哲。\n",
+    "\n",
+    "    我在2014年的時候以素人的身份參選，我的競選口號是「改變台灣從首都開\n",
+    "    始，改變台北從文化開始，這是一場以文化為主體的社會運動，也是台灣歷\n",
+    "    史上第一次以改變政治文化當作訴求的選舉」。 \n",
+    "\n",
+    "    其實，台灣還是有很大的城鄉差距，以垃圾分類隨袋徵收為例。從馬英九時\n",
+    "    代推廣，一直到現在，還是只有雙北垃圾分類隨袋徵收，所以台灣還是有大\n",
+    "    的城鄉差距。但是，台北作為一個整個台灣的領頭羊城市，我們還是要勇敢\n",
+    "    的向前進，然後把我們成功的經驗，然後把我們成功的經驗再推廣到全台灣\n",
+    "    各地去。\n",
+    "\n",
+    "    可是，如果我們要改變台北要改變什麼？答案是文化，什麼樣的文化？政治\n",
+    "    文化，但是所謂登高必自卑，行遠必自靡，所以我們還是要有一個起點，從\n",
+    "    哪裡做起？從自己做起，這是我當臺北市長的時候，從我的臺北市政府做起\n",
+    "    ，所以我們要從自己的選舉，或是台北市政府的文化來做起，我們來談談看\n",
+    "    這個選舉。 \n",
+    "\n",
+    "    2014年以前，其實20到29歲投票率從來沒有超過50%，為什麼年輕人不想去投\n",
+    "    票？因為他覺得選出來有什麼差別呢？可是為什麼在2014年的時候，我們提\n",
+    "    出這種推倒藍綠的訴求，年輕人會買單，主要原因是，我們當時有很多的做\n",
+    "    法讓他相信，比方說，我們不插旗、不掛布條，然後我們提早停止募款，甚\n",
+    "    至我們公布競選經費，還有在當時在MG149打得很兇的時候，我們就把財產、\n",
+    "    扣繳憑單還有甚至我在台大醫院的帳目都公開，所有這些讓年輕朋友想說，\n",
+    "    這個候選人跟其他人不一樣，所以他們才會願意出來投票。那當然很幸運的\n",
+    "    ，2014的選舉是有贏了。 \n",
+    "\n",
+    "    2018選舉我們一樣，還是一樣是海選，因為我常說，口號不能只有喊口號，\n",
+    "    它是要付諸實現，我們既然向天下徵才，我們說海選，開放政府，全民參與\n",
+    "    ，公開透明，開放政府，所以我們連競選幹部都向外面招募，當然初期有些\n",
+    "    磨合的問題，但是我認為只要能夠磨合到一定程度，他還是可以發揮到很大\n",
+    "    的效果，所以我們這次還是海選我們的幕僚，這相較於上一次，還是有一半\n",
+    "    民進黨進來幫忙，我們這次幾乎全部都是海選進來的年輕人。 \n",
+    "\n",
+    "    第二、我們這次沒有辦募款餐會 ，我們只有在網路上做小額募款，再來，我\n",
+    "    們還成立財務監督委員會，我相信其他候選人都是募款委員會，但是我們是\n",
+    "    財務監督委員會，因為畢竟雖然幕來的錢不是很多，但是我們也希望說募來\n",
+    "    的錢我們還是能夠很小心使用、合理的使用，所以我們就海選外面的財務監\n",
+    "    督委員會，來監督我們的財政，而且在這場選戰當中，我們還是堅持不打負\n",
+    "    面的選戰。 \n",
+    "\n",
+    "    我一直認為，選舉費用太高是台灣政治敗壞的開始，所以我們從自己做起，\n",
+    "    想辦法去降低費用，不過是這樣，我覺得監察院費用登記還是有問題，像上\n",
+    "    一次連勝文他說他去監察院登記的選舉費用比我還低，像我怎麼會服氣，這\n",
+    "    表示這還是有問題，不過anyway，國家是一步一步的往前進，所以對我來講\n",
+    "    ，選舉是一場改變政治文化的社會運動。我們自己也要相信他，真的很認真\n",
+    "    去做，那從2014到2018，我都一直把這個信念，選舉是改變政治文化的社會\n",
+    "    運動，我為什麼會有這個想法，其實在我心目中還有一個英雄，蔣渭水。 \n",
+    "\n",
+    "    蔣渭水在1921年台灣新文化運動，他就講了這句話，如果沒有辦法改變台灣\n",
+    "    人的文化，我們這個社會運動不會成功，所以對我來講，我還是把這個改變\n",
+    "    文化當作很重要的活動。 \n",
+    "    那我進入台北市政府以後，當了市長，其實我就開始引進這種創新文化，你\n",
+    "    知道，世大運跟台北燈節都滿成功的，可是你知道成功背後是什麼，我們允\n",
+    "    許公務員創新，我還記得要辦台北燈節的時候，觀傳局的一個科長進來，他\n",
+    "    跟我講，市長，我們想要把燈節搬到西門町，我問他說為什麼，他說我們公\n",
+    "    務員要創新，我當時跟他講說，孩子，我當市長都已經兩年了，我第一次聽\n",
+    "    到有公務員說要創新，你要幹什麼都可以。 \n",
+    "\n",
+    "    所以我就把台北燈節搬到西門町去辦，有沒有風險，坦白講是有，因為在花\n",
+    "    博裡面辦很安全，可是到西門町去辦，你中華路要封路，我後來才知道說，\n",
+    "    中華路上面有92路公車，一小時就有200班，所以這風險多大，但是我們還是\n",
+    "    說既然公務員願意創新，我們就給他一個機會。 \n",
+    "\n",
+    "    同樣的，辦世大運，以前世大運這種開閉幕，沒有把握，一定就找那種好萊\n",
+    "    塢國際公關公司來辦，但是我們覺得我們還是要給台灣年輕人機會，所以，\n",
+    "    我們世大運開閉幕導演全部35歲以下，而且全部都是我們的台灣的團隊。但\n",
+    "    是他還是很成功啊。所以我們常在想說，創新是台灣唯一的出路，為什麼我\n",
+    "    會有這個想法，台灣也沒有石油，也沒有金礦，其實創新是我們最大的出路\n",
+    "    。 \n",
+    "\n",
+    "    以前世大運開閉幕沒有把握，一定找好萊塢的國際公關公司來辦，但我們覺\n",
+    "    得，我們還是要給台灣的年輕人一個機會，所以我們世大運開閉幕的導演全\n",
+    "    部都35歲以下，而且全部都是台灣團隊，但那次很成功啊！ \n",
+    "\n",
+    "    所以我們常常在想，創新是台灣灣唯一的出路，為什麼會有這個想法？台灣\n",
+    "    也沒有石油、也沒有金礦，其實創新是我們最大的出路，民主、自由、多元\n",
+    "    、開放，這是我們台灣最大的優勢。因為我有機會到東南亞去看，才知道原\n",
+    "    來我們台灣真的是整個東亞世界，包括華人世界，最民主、自由、多元、開\n",
+    "    放，怎麼講你知道嗎？請問有哪個非回教國家，有五萬名穆斯林，穿著回教\n",
+    "    的傳統服裝，然後一起朝麥加朝拜？我們臺北開齋節有五萬人參加。 \n",
+    "\n",
+    "    就在兩個禮拜前，我們同志大遊行13萬人，其實同志問題在台灣是很有爭議\n",
+    "    ，大家各有堅持，可是儘管在整個社會當中有不同意見，還是能夠平順舉辦\n",
+    "    ，所以台灣真的是非常民主自由多元開放，這是我們台灣最大優勢，我們應\n",
+    "    當利用這個優勢，來發揚創新的精神。 \n",
+    "\n",
+    "    我常在講一個概念，新藥上市要不要做臨床試驗？要，所以坦白講，很多社\n",
+    "    會制度要上線，也要做實驗。以我們台北市在推社區保母的制度，一開始社\n",
+    "    會局長跟我說，他的設計是3個保母照顧10個0-2歲嬰兒，可是跑了半年後，\n",
+    "    他跟我講說不行，要改成4個照顧12個。為什麼？萬一保母請假，萬一小朋友\n",
+    "    沒辦法照顧那麼多，還要教室的尺寸，我們還是要遷就很多學校教室的大小\n",
+    "    。 \n",
+    "\n",
+    "    你想想看，從3個照顧10個，改成4個照顧12個；很多政治或是社會制度，你\n",
+    "    沒有試驗，你不曉得。所以我們要創造一個環境，讓公務員可以勇敢試驗，\n",
+    "    如果他每次做一個嘗試就K他，特別是失敗後，他當然不要創新。所以我在臺\n",
+    "    北市政府建立一個允許失敗環境，我鼓勵年輕人，給他機會，所以不管是世\n",
+    "    大運的成功，或是臺北燈節成功，就是這個理念的發揚。 \n",
+    "\n",
+    "    最後我們講講看，另外一個叫公開透明。最近很多候選人、議員喜歡打，柯\n",
+    "    文哲當台北市長，不到四年還債還了530億，下星期可以還到540億，到底怎\n",
+    "    麼做到的？坦白講，就是一個概念，你要勤勞。 \n",
+    "\n",
+    "    我每天早上7點半準時開會，要追加預算專案報告，催收款前五名專案報告，\n",
+    "    預算執行率太低的專案報告，我們讓每個單位戰戰兢競的去做。在我上任之\n",
+    "    前，臺北市政府的資本門預算執行率，一年才66%，表示說編的預算，一年執\n",
+    "    行結束之後，才執行2/3，現在就算很用力地追，才升到74%。表示說我們效\n",
+    "    能要慢慢提高。\n",
+    "\n",
+    "    但是，一、我們還是很勤勞，然後再盯小細節。然後讓大家慢慢一步步效率\n",
+    "    去改善，要很勤勞、吃苦耐勞。再來，我們有很多制度，比方說我當市長，\n",
+    "    我當時的要求，超過兩千萬以上，不准價格標，要最有利標，以前公園不願\n",
+    "    意負責，他就價格標，低價搶標，品質很差，再倒閉、再追加預算。我說，\n",
+    "    作為首長，對自己業務要有把握、要有信心，要負責任，所以不准價格標，\n",
+    "    全部用要最有利標。所以目前臺北市政府超過兩千萬以上，價格標需要市長\n",
+    "    專權同意。\n",
+    "\n",
+    "    再來，我們公布底價，大家都知道底價多少；再來，重大工程上網招標，同\n",
+    "    時公布評審委員的名字。一開始遇到很多抵抗，後來他們說醫療事業找不到\n",
+    "    人，我說我是醫生沒問題，醫療事業我自己去當評審委員，當然大家不敢讓\n",
+    "    市長當評委，他們就還是克服了，所以上網招標就同時公布評審委員的名字\n",
+    "    。 \n",
+    "\n",
+    "    再來，我們標案隨著價錢，費用越高，委員要越多；規定府內要幾個、府外\n",
+    "    要幾個，然後府內府外還有定義，退休3年內不算府外，開標時候要超過2/3\n",
+    "    委員出席才可以，而且出席委員外聘要超過一半。也就是我們透過最有利標\n",
+    "    、公布評審委員名字、公布底價，府內府外有定義，而且開標時候，不准說\n",
+    "    有人不來。\n",
+    "\n",
+    "    在這種制度之下，我要問大家，2017年，在我當市長第三年，我們臺北市是\n",
+    "    財政部頒發全臺灣招商第一名，有299億；今年到現在已經398億，我認為還\n",
+    "    是會第1名 ，明年因為有雙子星，大概會超過 5、600億，所以還是會第1名\n",
+    "    。 \n",
+    "\n",
+    "    我要跟大家講一個概念，其實公開透明，正正當當當做生意，還是可以做生\n",
+    "    意，而且還可以賺錢。以前要靠複雜的政商關係，如果靠複雜的政商關係，\n",
+    "    可以跟政府打交道的，就是那幾家；可是你要是公開透明、公平正義，每個\n",
+    "    人都可以跟你做生意。其實我也查過，很多人批評柯文哲前兩年招商不利，\n",
+    "    後來我發現，馬英九、郝龍斌當市長，前兩年招商也都是掛零，當然我前兩\n",
+    "    年也是掛零。\n",
+    "\n",
+    "    但是，對他們來講是建立新的政商關係，對我來講，我是建立新的制度。所\n",
+    "    以我們BOT，我們建立超額利潤制度。你想想看，明年利率你都不知道，你怎\n",
+    "    麼有辦法估計70年後的財務狀況？所以我們發明一個制度，就設定一個門檻\n",
+    "    。超過門檻以後、多賺的，政府跟企業對半分，這樣的話，就變成政府跟財\n",
+    "    團是夥伴關係，大家合作賺錢，而不是說像以前是切開。給太多，說我們圖\n",
+    "    利商人，不給，商人說他有風險。 \n",
+    "\n",
+    "    另外像地價，超過6%，有時候一下漲太多，我們說每年最多還帳6％。包括樹\n",
+    "    木保護，我們有訂立制度。所以也就是說，我們讓一個制度公平正義、公開\n",
+    "    透明，大家都很喜歡來做生意。所以我當市長前一年，國外直接投資，全台\n",
+    "    灣52%是在台北市；到了第三年，全台灣投資在台北市76%，為什麼？公開透\n",
+    "    明、清楚乾淨，外商也喜歡跟這種人作生意，所以我們臺北招商環境比以前\n",
+    "    更好，所以公開透明是有用的。 \n",
+    "\n",
+    "\n",
+    "\n",
+    "    第二階段：\n",
+    "\n",
+    "    我是登記四號的柯文哲市長候選人。\n",
+    "\n",
+    "    我是一個外科醫生，從外科醫生來當市長，我們外科醫生有兩個特色，務實\n",
+    "    跟對話，用臺灣話來說，講的滿嘴口水，所以外科醫生是相當務實的，我們\n",
+    "    雖然遵守SOP，但是遇到不同的疾病，是用不同的SOP，再來，我們還是有對\n",
+    "    話，其實一個疾病有不同的治療方式，要選擇哪一個並不是外科醫生決定，\n",
+    "    是要跟病人或家屬溝通過以後，才讓他們選擇。 \n",
+    "\n",
+    "    所以外科醫生是務實跟對話，其實同樣的，我們應當把這兩個原則帶到政治\n",
+    "    ，其實政治第一個還是要務實處理，就是要講究專業，坦白講，今年那個颱\n",
+    "    風假就是典型的例子，如果我們都不肯尊重專業，那如何務實。 \n",
+    "\n",
+    "    像那個明明就是沒有達到放颱風假的標準，可是整個北台灣只有臺北市跟基\n",
+    "    隆市是正常上班， 其他全部放颱風假，所以我們講說務實，務實的先決條件\n",
+    "    尊重專業，再來，對話，其實在我們台灣社會常常是這樣，我們都想著試圖\n",
+    "    去說服跟我們不同意見的人，那如果他不聽我們的話，很想把他消滅掉。其\n",
+    "    實這是不對的。因為不同意見的人，如果可以讓他們在這個社會裡面和諧共\n",
+    "    榮生存，這才是我們思考的，所以務實跟對話就是我的原則。 \n",
+    "\n",
+    "    事實上，我們在處理2017世大運也是這種精神，世大運的目的是什麼，爭取\n",
+    "    台灣最大的國際生存空間，台灣走出去，世界走進來，讓世界看見台灣，我\n",
+    "    們也是很成功做到了。 \n",
+    "\n",
+    "    其實從世大運到兩岸關係，我覺得一模一樣，我，228家屬，我有我的想法，\n",
+    "    但是一旦我當台北市長，我是要謀取最大多數市民的最大福利，並不是把我\n",
+    "    意識形態去加在別人頭上。所以我們如果可以把人民的福祉當作第一優先，\n",
+    "    坦白講，其實中央跟地方不會有太多什麼不同的意見，甚至在藍綠之間，也\n",
+    "    不應當有太多不同的意見。所以，如果我們是有這種務實跟對話的精神，其\n",
+    "    實可以少掉很多問題。 \n",
+    "\n",
+    "    我們來看看台灣的現況，其實1949年，來了所謂200萬的外省人來到台灣，\n",
+    "    1987年，兩岸開放探親以來，我們現在台灣有38萬的陸配，現在有200萬台灣\n",
+    "    人在大陸，不管他是經商、求學、工作，還是根本就在那邊養老，還有一點\n",
+    "    ，台灣的經貿40％是跟中國大陸，這是一個現況，如果在這種現況之下，硬\n",
+    "    是要在台灣島內分出敵我，坦白講，這是自找麻煩、自亂陣腳。 \n",
+    "\n",
+    "    再來，我認為，未來15年，中美對抗的國際局勢已經形成，這也不是我們台\n",
+    "    灣可以自己決定的，這是一個現況，所以在這種中美對抗的國際局勢之下，\n",
+    "    在這種台灣現況之下，其實我們要思考的是，在這種現實狀態下，如何務實\n",
+    "    的去處理問題。\n",
+    "\n",
+    "    也因為這樣，所以我一直很不樂見兩岸灣係越來越緊張，所以民間交流、城\n",
+    "    市交流這種層次還是要維持，大家都知道，陸客不來台灣，對台灣經濟有些\n",
+    "    影響，但是陸客不來，如果是中國政府用禁止的手段，那還好辦，透過談判\n",
+    "    的手段可以去處理，但是如果是大陸人民對台灣不喜歡而不來，那才是嚴重\n",
+    "    ，所以如何增加兩邊之間的善意交流，這非常重要。 \n",
+    "\n",
+    "    這也是為什麼我在2015年的時候，首先提出四個互相，互相認識、互相了解\n",
+    "    、互相尊重、互相合作，透過更多的交流我們可以互相認識，認識而互相了\n",
+    "    解，那當然我們能夠文明的社會大家彼此互相尊重，最後互相合作。在2017\n",
+    "    年的時候，我就多了一個互相，叫互相諒解，從互相認識、互相了解、互相\n",
+    "    尊重、互相合作到互相諒解， 坦白講，雙方都有他各自內部的問題，有他的\n",
+    "    困難，所以有時候在兩邊交往，如果大家能夠秉持互相諒解態度，可以少掉\n",
+    "    很多問題。\n",
+    "\n",
+    "    講一大堆，不過還是有一句話，終究，沒有人把自己全部的未來都壓在別人\n",
+    "    的善意上面，所以該做準備還是要做，經濟國防還是最主要，1990年的時候\n",
+    "    ，台灣GDP占中國大陸的43%，今天掉到連4.6%都還撐不住，所以我們自己要\n",
+    "    自立自強，經濟要維持一定的水準，國防力量要維持，所以，勿恃敵之不來\n",
+    "    ，恃吾有以待之，因此總結來講，其實在兩岸之間也是這樣，和平是個目標\n",
+    "    ，那我們要務實處理問題，我們先表達善意，可是該做準備還是要準備。其\n",
+    "    實政治沒有這麼簡單，我常講說，以簡單的心靈迎，面對複雜的世界，就是\n",
+    "    這樣。 \n",
+    "\n",
+    "    其實昨天李錫錕有在講說，當市長要有偉大的願景。其實我覺得這句話也沒\n",
+    "    有不對，但是是這樣，我個人理念，政治還是要落實在人民生活的每一天，\n",
+    "    為什麼你知道嗎？人民的小事還是政府的大事，用另外一句話來講，把小問\n",
+    "    題解決，就沒有大問題。常常我們台灣社會是這樣，小問題不解決，拖拖拖\n",
+    "    到最後就變成大問題，很難解決。 \n",
+    "\n",
+    "    其實政治要落實在人民生活的每一天，我講一個最顯明的例子，鄰里交通改\n",
+    "    善計畫。住在臺北的市民，你們有沒有發現，你住的巷弄，好像一邊有畫綠\n",
+    "    色人行通道，另外一邊有畫停車格。其實這個沒有什麼偉大的工作，它只要\n",
+    "    耐煩而已。因為綠色人行通道要畫這一邊、還是畫那一邊，停車格要前面一\n",
+    "    點、後面一點，其實這需要跟居民協調。它不是什麼偉大的工程，它只是要\n",
+    "    政府耐煩的去做。 \n",
+    "\n",
+    "    一開始，我們只是想說讓巷弄整齊一點、有秩序一點、乾淨一點，結果沒想\n",
+    "    到發現一個沒想到的好處，2017年，臺北市車禍死亡人數是50年來最低的一\n",
+    "    次。我們到去年年底，事實上我們臺北市有456個里，有做鄰里交通改善計畫\n",
+    "    還不到190里，還不到一半。但是有做的里，我們統計上，第一年車禍傷亡人\n",
+    "    數降47%，到第三年會降到40％，它降47％，後來降60%，這個看起來很簡單\n",
+    "    動作，竟然讓臺北市車禍傷亡人數下降那麼多。 \n",
+    "\n",
+    "    以前走在巷子，兩邊都違規停車，不管你推嬰兒車還是老人，被迫走到中間\n",
+    "    ，摩托車經過去就受傷。我算過，其實算A1，就是車禍後一天內死亡，這還\n",
+    "    比較不準，其實算車禍死亡人數比較準是A30，就是車禍後30天內死亡的人數\n",
+    "    。在我上任前一年，大概是150個，去年降到差不多100個。你想想看，鄰里\n",
+    "    交通改善計畫沒有什麼偉大的東西，可是很明顯讓台北市車禍傷亡人數下降\n",
+    "    ，所以政治還是要落實在人民生活的每一天。我相信一個老百姓遇到車禍，\n",
+    "    他沒有怪政府，他是怪自己運氣不好，可是他不知道，這是政府是可以做的\n",
+    "    。 \n",
+    "\n",
+    "    以陽明山仰德大道為例，去年7月發生一次大車禍，一次就撞死4個，對市長\n",
+    "    來講當然是重大事件，我要求說這到底是怎麼一回事，我的精神，沒有統計\n",
+    "    就沒有統治，通常我們會先看統計數字。結果赫然發現，前五年仰德大道發\n",
+    "    生車禍七百次，後來要求把仰德大道發生車禍地點用google map去把點點出\n",
+    "    來，後來很明顯發現有一個車禍熱點，針對每一個車禍熱點，我們都去做交\n",
+    "    通改善計畫，甚至還把里長找來，這個地方常常發生車禍，我們有一些改善\n",
+    "    計畫，你覺得怎麼樣，有沒有意見。一路修修修整理，比較今年一到七月，\n",
+    "    跟去年一到七月，仰德大道的車禍下降60％。過去這麼多年，有多少文化大\n",
+    "    學的學生死在那條路上。可是我後來發現，這是政府可以做的。後來我有個\n",
+    "    朋友跟我說，他發現仰德大道小石頭都減少了，因為一般挖馬路，常常路面\n",
+    "    沒有清乾淨，常常就會很多小石頭，結果下坡時候摩托車一滑倒就發生車禍\n",
+    "    。其實政治沒有那麼困難，政治在耐煩而已。政治在把人民小問題解決掉，\n",
+    "    所以單單把路面掃乾淨，把交通號誌整理，把安全島弄好，仰德大道車禍竟\n",
+    "    然下降60%。我就要問了，過去死在這條路上，豈不是因為政府的不努力而犧\n",
+    "    牲掉了？\n",
+    "\n",
+    "    同樣的，重陽橋機車道，四年發生車禍200次，後來我們就重做，把機車彎弄\n",
+    "    弧度不要那麼大，改一遍，聽說今年三月到現在，機車彎沒有發生車禍。我\n",
+    "    要問的是說，一定要發生200次車禍，我們才知道說那個地方有問題？所以我\n",
+    "    後來發現，其實為政在於耐煩，為政就是把人民問題放在心中，它就是問題\n",
+    "    ，然後耐煩的去做。 \n",
+    "\n",
+    "    很多人問我們說，環南市場延宕將近18年，為什麼臺北市政府在柯文哲領導\n",
+    "    下，有辦法開工工？我跟大家講，環南市場裡面攤商有1300攤，外面沒有牌\n",
+    "    照還有300攤，加起來1600攤，坦白講，那個就是耐煩，要跟他溝通，跟他講\n",
+    "    。在環南市場開工的第一天，我們市場處主秘非常感慨，他說他進臺北市政\n",
+    "    府當公務員，第一份公文就是環南市場改建計畫，18年後，他當到市場處的\n",
+    "    主秘，環南市場終於開工。坦白講，環南市場開工需要花18年嗎？可是為什\n",
+    "    麼大家不肯去做，一、沒有把人民的問題放在心中，第二、不耐煩。 \n",
+    "\n",
+    "    同樣的道理，斯文里三期我們花了兩年半跟兩百多戶的居民溝通再溝通，開\n",
+    "    工了。聽說以前每次要市長選舉，市長候選人都要去那裡虛晃一招，信誓旦\n",
+    "    旦說有天他當市長，一定會把斯文里三期、蘭州國宅這些改建。很不幸，已\n",
+    "    經被我拆掉改建，以後候選人再也不能玩這個把戲了。 \n",
+    "\n",
+    "    其實，它就是耐煩。同樣的道理，社子島，社子島已經禁建48年。我今年才\n",
+    "    去去內政部營建署說，如果社子島真的禁建48年，今天社子島上面就只有野\n",
+    "    生動物，不會有人類。所以我還是說服他說，要面對問題實際去解決。 \n",
+    "\n",
+    "    從剛剛林林總總講那麼多，從大龍市場改建、環南市場改建、第一果菜市場\n",
+    "    、魚市場、成功市場、南門市場，現在在東門市場跟北投市場在處理當中。\n",
+    "    其實為政在於耐煩，把人民需求放在心中，耐煩而已。當然，除了耐煩以外\n",
+    "    ，另外，我覺得我們會成功改建這些市場，還有一個就是信用（Credit )。\n",
+    "    當年大龍市場，我們跟居民都還沒簽約，他們就搬出去了，他們相信政府應\n",
+    "    該不會騙他們，所以願意搬出去。所以簡單來講，我們叫建立一個有信用的\n",
+    "    政府，如果我們真的有信用，老百姓會更相信我們，整個施政會更順利。 \n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
